--- a/Machine_learning/facial_feature_analysis/app/requirements.txt
+++ b/Machine_learning/facial_feature_analysis/app/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-requests
-numpy
-cvlib
-mediapipe
-tensorflow
-Pillow
+streamlit>=1.24.0
+Pillow>=9.5.0
+requests>=2.31.0
+mediapipe>=0.10.0
+numpy>=1.24.3
+tensorflow>=2.13.0
+opencv-python-headless>=4.8.0  # Using headless version instead of full opencv
