--- a/Machine_learning/homiee/presentation_app/Dockerfile
+++ b/Machine_learning/homiee/presentation_app/Dockerfile
@@ -1,6 +1,17 @@
 FROM mcr.microsoft.com/playwright/python:v1.44.0-jammy
+
 WORKDIR /app
+
+# Install Python dependencies first (layer caching)
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Playwright browsers are already in the base image
+# but we run install to ensure they're linked correctly
+RUN playwright install chromium
+
+# Copy app files
 COPY . .
-CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
+
+# Railway injects $PORT at runtime
+CMD ["sh", "-c", "uvicorn server:app --host 0.0.0.0 --port ${PORT:-8000}"]
